# littlesmalltalk

./: .gitignore  CMakeLists.txt  README.md  run
forks/parable/: CMakeLists.txt  README  README.md  gen_img  manual.md
forks/parable/source/: lex.c  memory.c  parser.c  st.c  tty.c
forks/parable/src/: interp.c  lex.h  primitive.c
imgbuild/: globs.h  imgbuilder.c  memory.h
lst3/: CMakeLists.txt  st.c
lst3/src/: filein.c  initial.c  parser.c  unixio.c
lst5/: CMakeLists.txt  README
lst5/src/: lst_ffi_primitives.c  main.c  memory.c  rss_queue.c
src/: env.h  filein.c  interp.c  interp.h  lex.c  lst_primitives.c  lst_socket_primitives.c  memory.c  memory.h  names.c  names.h  news.c  primitive.c  rss_dynload.c  tty.c
